--- a/portfolio/src/components/Layout.css
+++ b/portfolio/src/components/Layout.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 
 body {
   font-family: "Roboto", sans-serif;
@@ -6,4 +6,28 @@ body {
 
 h1 {
   text-transform: capitalize;
+}
+
+.images {
+  text-align: center;
+  text-transform: capitalize;
+  width: 80vw;
+  margin: 0 auto 10rem auto;
+}
+
+.single-image {
+  border: 3px solid black;
+  padding: 1rem 0;
+}
+
+@media screen and (min-width: 992px) {
+  .images {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 1rem;
+  }
+}
+
+.small {
+  width: 200px;
 }
